<resources>
    <string name="app_name">MovieBrowser</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_field_default">Show only movies changed in last</string>
    <string name="search_field2_default">days</string>
    <string name="button_search">search</string>
    <string name="loading_label">Loading</string>
    <string name="title_label">Title</string>
    <string name="language_label">Language</string>
    <string name="genre_label">Genre</string>
    <string name="overview_label">Overview</string>
    <string name="release_date_label">Release date</string>
    <string name="unknown_label">unknown</string>
    <string name="error_communication_failure">Communication failure. Please try is later.</string>
</resources>