<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MovieDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown_label"
            android:textSize="@dimen/pageTitle"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_loading"
            app:layout_constraintTop_toBottomOf="@id/title" />


        <TextView
            android:id="@+id/languageHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/language_label"
            android:textSize="@dimen/primaryText"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/genreHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cover" />

        <TextView
            android:id="@+id/genreHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/genre_label"
            android:textSize="@dimen/primaryText"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/releaseDateHeader"
            app:layout_constraintStart_toEndOf="@id/languageHeader"
            app:layout_constraintTop_toBottomOf="@id/cover" />

        <TextView
            android:id="@+id/releaseDateHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/release_date_label"
            android:textSize="@dimen/primaryText"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/genreHeader"
            app:layout_constraintTop_toBottomOf="@id/cover" />

        <TextView
            android:id="@+id/language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/unknown_label"
            app:layout_constraintEnd_toEndOf="@id/languageHeader"
            app:layout_constraintStart_toStartOf="@id/languageHeader"
            app:layout_constraintTop_toBottomOf="@id/languageHeader" />


        <TextView
            android:id="@+id/genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/unknown_label"
            app:layout_constraintEnd_toEndOf="@id/genreHeader"
            app:layout_constraintStart_toStartOf="@id/genreHeader"
            app:layout_constraintTop_toBottomOf="@id/genreHeader" />


        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/unknown_label"
            app:layout_constraintEnd_toEndOf="@id/releaseDateHeader"
            app:layout_constraintStart_toStartOf="@id/releaseDateHeader"
            app:layout_constraintTop_toBottomOf="@id/releaseDateHeader" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/labelBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="language,genre,releaseDate" />

        <TextView
            android:id="@+id/overviewHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/overview_label"
            android:textSize="@dimen/primaryText"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/labelBarrier" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unknown_label"
            app:layout_constraintTop_toBottomOf="@id/overviewHeader" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>